:eyes: Unify style across screens

--- a/app/src/main/res/layout/fragment_measure_settings.xml
+++ b/app/src/main/res/layout/fragment_measure_settings.xml
@@ -1,161 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/title_new_measurement" />
+        android:layout_height="wrap_content">
 
-    <com.google.android.material.button.MaterialButtonToggleGroup
-        android:id="@+id/button_group_measurement_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:selectionRequired="true"
-        app:singleSelection="true">
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title="@string/title_new_measurement">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_measurement_type_face"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_measurement_type_face" />
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button_measurement_type_finger"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_measurement_type_finger" />
-    </com.google.android.material.button.MaterialButtonToggleGroup>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
-    <TextView
-        android:id="@+id/measurement_type_description"
-        style="?attr/textAppearanceBodyLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        android:paddingVertical="8dp"
-        android:text="@string/measurement_type_description_face"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_group_measurement_type" />
-
-    <TextView
-        android:id="@+id/activity_level_prompt"
-        style="?attr/textAppearanceTitleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        android:paddingVertical="8dp"
-        android:text="@string/activity_level_prompt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/measurement_type_description" />
-
-    <HorizontalScrollView
-        android:id="@+id/scroll_view_activity_level"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/activity_level_prompt">
-
-        <com.google.android.material.button.MaterialButtonToggleGroup
-            android:id="@+id/button_group_activity_level"
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/screen_padding_horizontal"
-            app:selectionRequired="true"
-            app:singleSelection="true">
+            android:paddingVertical="@dimen/screen_padding_vertical">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_activity_level_relaxed"
+            <com.google.android.material.button.MaterialButtonToggleGroup
+                android:id="@+id/button_group_measurement_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:selectionRequired="true"
+                app:singleSelection="true">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_measurement_type_face"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_measurement_type_face" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/button_measurement_type_finger"
+                    style="?attr/materialButtonOutlinedStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/button_measurement_type_finger" />
+            </com.google.android.material.button.MaterialButtonToggleGroup>
+
+            <TextView
+                android:id="@+id/measurement_type_description"
+                style="?attr/textAppearanceBodyLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:paddingVertical="8dp"
+                android:text="@string/measurement_type_description_face"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_group_measurement_type" />
+
+            <TextView
+                android:id="@+id/activity_level_prompt"
+                style="?attr/textAppearanceTitleLarge"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:paddingVertical="8dp"
+                android:text="@string/activity_level_prompt"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/measurement_type_description" />
+
+            <HorizontalScrollView
+                android:id="@+id/scroll_view_activity_level"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/activity_level_prompt">
+
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:id="@+id/button_group_activity_level"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:selectionRequired="true"
+                    app:singleSelection="true">
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/button_activity_level_relaxing"
+                        style="?attr/materialButtonOutlinedStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activity_level_relaxing" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/button_activity_level_exercising"
+                        style="?attr/materialButtonOutlinedStyle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/activity_level_exercising" />
+                </com.google.android.material.button.MaterialButtonToggleGroup>
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/measurement_duration_prompt"
+                style="?attr/textAppearanceTitleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="@string/measurement_duration_prompt"
+                android:textAlignment="center"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/scroll_view_activity_level" />
+
+            <TextView
+                android:id="@+id/measurement_duration_prompt_subtitle"
+                style="?attr/textAppearanceCaption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="@string/measurement_duration_prompt_subtitle"
+                android:textAlignment="center"
+                android:textColor="?colorOnSurface"
+                android:textStyle="italic"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt" />
+
+            <de.Maxr1998.modernpreferences.views.ModernSeekBar
+                android:id="@+id/measurement_duration_slider"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt_subtitle"
+                app:layout_constraintWidth_max="@dimen/max_view_width" />
+
+            <Button
+                android:id="@+id/button_start_measurement"
                 style="?attr/materialButtonOutlinedStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/activity_level_relaxed" />
+                android:text="@string/button_start_measurement"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/measurement_duration_slider" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_activity_level_seated"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/activity_level_seated" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_activity_level_light_exercise"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/activity_level_light_exercise" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_activity_level_heavy_exercise"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/activity_level_heavy_exercise" />
-        </com.google.android.material.button.MaterialButtonToggleGroup>
-    </HorizontalScrollView>
-
-    <TextView
-        android:id="@+id/measurement_duration_prompt"
-        style="?attr/textAppearanceTitleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        android:text="@string/measurement_duration_prompt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/scroll_view_activity_level" />
-
-    <TextView
-        android:id="@+id/measurement_duration_prompt_subtitle"
-        style="?attr/textAppearanceCaption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        android:text="@string/measurement_duration_prompt_subtitle"
-        android:textColor="?colorOnSurface"
-        android:textStyle="italic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt" />
-
-    <de.Maxr1998.modernpreferences.views.ModernSeekBar
-        android:id="@+id/measurement_duration_slider"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:paddingHorizontal="@dimen/screen_padding_horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/measurement_duration_prompt_subtitle"
-        app:layout_constraintWidth_max="@dimen/max_view_width" />
-
-    <Button
-        android:id="@+id/button_start_measurement"
-        style="?attr/materialButtonOutlinedStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/screen_padding_horizontal"
-        android:layout_marginBottom="@dimen/screen_padding_vertical"
-        android:text="@string/button_start_measurement"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
