--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -56,7 +56,9 @@
                     style="@style/Widget.Material3.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/statistics_btn_week" />
+                    android:text="@string/statistics_btn_week"
+                    android:clickable="false"
+                    android:enabled="false" />
 
             </com.google.android.material.button.MaterialButtonToggleGroup>
 
