:sparkles: Finish integrating HeartRangeView

--- a/app/src/main/res/values/attrs_heart_range_view.xml
+++ b/app/src/main/res/values/attrs_heart_range_view.xml
@@ -2,12 +2,14 @@
     <declare-styleable name="HeartRangeView">
         <attr name="lowerBound" format="integer" />
         <attr name="upperBound" format="integer" />
-        <attr name="greenStart" format="integer" />
-        <attr name="greenEnd" format="integer" />
+        <attr name="goodStart" format="integer" />
+        <attr name="goodEnd" format="integer" />
         <attr name="currentValue" format="integer" />
         <attr name="warningColor" format="color" />
         <attr name="goodColor" format="color" />
         <attr name="markerWidth" format="dimension" />
-
+        <attr name="legendColor" format="color" />
+        <attr name="markerColor" format="color" />
+        <attr name="legendTextSize" format="dimension" />
     </declare-styleable>
 </resources>
