--- a/app/src/main/res/layout/activity_measure_results.xml
+++ b/app/src/main/res/layout/activity_measure_results.xml
@@ -47,17 +47,21 @@
     <edu.uaux.pheart.measure.HeartRangeView
         android:id="@+id/resting_rating_graph"
         android:layout_width="0dp"
-        android:layout_height="125dp"
+        android:layout_height="90dp"
 
         android:layout_marginHorizontal="16dp"
         android:layout_marginVertical="48dp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/measurement_date_text" />
+        app:layout_constraintTop_toBottomOf="@id/measurement_date_text"
 
-    <!-- TODO add textviews for the other measurements -->
-
+        app:lowerBound="50"
+        app:upperBound="150"
+        app:goodColor="@color/material_dynamic_primary30"
+        app:warningColor="@color/material_dynamic_primary70"
+        app:legendColor="?attr/colorOnSurface"
+        />
 
     <TextView
         android:id="@+id/compare_yesterday_average_value"
