--- a/app/src/main/res/layout/activity_measure_results.xml
+++ b/app/src/main/res/layout/activity_measure_results.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="@dimen/screen_padding_horizontal"
+    android:layout_marginVertical="@dimen/screen_padding_vertical"
     tools:context=".measure.MeasureResultsActivity">
 
 
@@ -75,7 +77,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/compare_yesterday_average_text" />
 
-
     <TextView
         android:id="@+id/compare_yesterday_average_text"
         style="@style/TextAppearance.Material3.BodyLarge"
@@ -116,8 +117,56 @@
         android:id="@+id/resting_view_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:constraint_referenced_ids="compare_last_week_average_value,compare_yesterday_average_value,compare_yesterday_average_text,compare_last_week_average_text,resting_rating_graph" />
 
 
+    <edu.uaux.pheart.measure.HeartRangeView
+        android:id="@+id/exercise_heartrate_graph"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginVertical="48dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/measurement_date_text"
+
+        app:lowerBound="60"
+        app:upperBound="200"
+        app:goodColor="@color/material_dynamic_primary30"
+        app:warningColor="@color/material_dynamic_primary70"
+        app:legendColor="?attr/colorOnSurface"
+        />
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/exercise_heartrate_graph">
+
+        <include
+            android:id="@+id/exercise_heart_rate"
+            layout="@layout/display_bpm"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            style="@style/TextAppearance.Material3.BodyMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/profile_exercise_heart_rate_info_text" />
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/exercise_view_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="linearLayoutCompat,exercise_heartrate_graph" />
 </androidx.constraintlayout.widget.ConstraintLayout>
