--- a/app/src/main/res/layout/display_bpm.xml
+++ b/app/src/main/res/layout/display_bpm.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:letterSpacing="0.2"
-        android:text="@string/bpm"
+        android:text="@string/bpm_unit"
         app:layout_constraintBaseline_toBaselineOf="@id/bpm_text"
         app:layout_constraintStart_toEndOf="@id/bpm_text" />
 
