--- a/app/src/main/res/layout/display_bpm_small.xml
+++ b/app/src/main/res/layout/display_bpm_small.xml
@@ -20,7 +20,7 @@
         style="@style/TextAppearance.Material3.LabelSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/bpm"
+        android:text="@string/bpm_unit"
         app:layout_constraintBaseline_toBaselineOf="@id/bpm_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bpm_text" />
